@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2003, 2013, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2003, 2014, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -937,18 +937,13 @@ public class Basic {
         equal(pb.redirectError(), Redirect.to(efile));
 
         THROWS(IllegalArgumentException.class,
-            new Fun(){void f() {
-                pb.redirectInput(Redirect.to(ofile)); }},
-            new Fun(){void f() {
-                pb.redirectInput(Redirect.appendTo(ofile)); }},
-            new Fun(){void f() {
-                pb.redirectOutput(Redirect.from(ifile)); }},
-            new Fun(){void f() {
-                pb.redirectError(Redirect.from(ifile)); }});
+               () -> pb.redirectInput(Redirect.to(ofile)),
+               () -> pb.redirectOutput(Redirect.from(ifile)),
+               () -> pb.redirectError(Redirect.from(ifile)));
 
         THROWS(IOException.class,
                // Input file does not exist
-               new Fun(){void f() throws Throwable { pb.start(); }});
+               () -> pb.start());
         setFileContents(ifile, "standard input");
 
         //----------------------------------------------------------------
@@ -1084,18 +1079,15 @@ public class Basic {
                 = new FilePermission("<<ALL FILES>>", "read,write,execute");
 
             THROWS(SecurityException.class,
-               new Fun() { void f() throws IOException {
-                   policy.setPermissions(xPermission);
-                   redirectIO(pb, from(tmpFile), PIPE, PIPE);
-                   pb.start();}},
-               new Fun() { void f() throws IOException {
-                   policy.setPermissions(rxPermission);
-                   redirectIO(pb, PIPE, to(ofile), PIPE);
-                   pb.start();}},
-               new Fun() { void f() throws IOException {
-                   policy.setPermissions(rxPermission);
-                   redirectIO(pb, PIPE, PIPE, to(efile));
-                   pb.start();}});
+                   () -> { policy.setPermissions(xPermission);
+                           redirectIO(pb, from(tmpFile), PIPE, PIPE);
+                           pb.start();},
+                   () -> { policy.setPermissions(rxPermission);
+                           redirectIO(pb, PIPE, to(ofile), PIPE);
+                           pb.start();},
+                   () -> { policy.setPermissions(rxPermission);
+                           redirectIO(pb, PIPE, PIPE, to(efile));
+                           pb.start();});
 
             {
                 policy.setPermissions(rxPermission);
@@ -1258,10 +1250,10 @@ public class Basic {
         // System.getenv() is read-only.
         //----------------------------------------------------------------
         THROWS(UnsupportedOperationException.class,
-            new Fun(){void f(){ getenv().put("FOO","BAR");}},
-            new Fun(){void f(){ getenv().remove("PATH");}},
-            new Fun(){void f(){ getenv().keySet().remove("PATH");}},
-            new Fun(){void f(){ getenv().values().remove("someValue");}});
+               () -> getenv().put("FOO","BAR"),
+               () -> getenv().remove("PATH"),
+               () -> getenv().keySet().remove("PATH"),
+               () -> getenv().values().remove("someValue"));
 
         try {
             Collection<Map.Entry<String,String>> c = getenv().entrySet();
@@ -1286,19 +1278,17 @@ public class Basic {
         {
             final Map<String,String> m = new ProcessBuilder().environment();
             THROWS(IllegalArgumentException.class,
-                new Fun(){void f(){ m.put("FOO=","BAR");}},
-                new Fun(){void f(){ m.put("FOO\u0000","BAR");}},
-                new Fun(){void f(){ m.put("FOO","BAR\u0000");}});
+                   () -> m.put("FOO=","BAR"),
+                   () -> m.put("FOO\u0000","BAR"),
+                   () -> m.put("FOO","BAR\u0000"));
         }
 
         //----------------------------------------------------------------
         // Commands must never be null.
         //----------------------------------------------------------------
         THROWS(NullPointerException.class,
-               new Fun(){void f(){
-                   new ProcessBuilder((List<String>)null);}},
-               new Fun(){void f(){
-                   new ProcessBuilder().command((List<String>)null);}});
+               () -> new ProcessBuilder((List<String>)null),
+               () -> new ProcessBuilder().command((List<String>)null));
 
         //----------------------------------------------------------------
         // Put in a command; get the same one back out.
@@ -1323,25 +1313,18 @@ public class Basic {
         // Commands must contain at least one element.
         //----------------------------------------------------------------
         THROWS(IndexOutOfBoundsException.class,
-            new Fun() { void f() throws IOException {
-                new ProcessBuilder().start();}},
-            new Fun() { void f() throws IOException {
-                new ProcessBuilder(new ArrayList<String>()).start();}},
-            new Fun() { void f() throws IOException {
-                Runtime.getRuntime().exec(new String[]{});}});
+               () -> new ProcessBuilder().start(),
+               () -> new ProcessBuilder(new ArrayList<String>()).start(),
+               () -> Runtime.getRuntime().exec(new String[]{}));
 
         //----------------------------------------------------------------
         // Commands must not contain null elements at start() time.
         //----------------------------------------------------------------
         THROWS(NullPointerException.class,
-            new Fun() { void f() throws IOException {
-                new ProcessBuilder("foo",null,"bar").start();}},
-            new Fun() { void f() throws IOException {
-                new ProcessBuilder((String)null).start();}},
-            new Fun() { void f() throws IOException {
-                new ProcessBuilder(new String[]{null}).start();}},
-            new Fun() { void f() throws IOException {
-                new ProcessBuilder(new String[]{"foo",null,"bar"}).start();}});
+               () -> new ProcessBuilder("foo",null,"bar").start(),
+               () -> new ProcessBuilder((String)null).start(),
+               () -> new ProcessBuilder(new String[]{null}).start(),
+               () -> new ProcessBuilder(new String[]{"foo",null,"bar"}).start());
 
         //----------------------------------------------------------------
         // Command lists are growable.
@@ -1358,15 +1341,13 @@ public class Basic {
         try {
             final Map<String,String> env = new ProcessBuilder().environment();
             THROWS(NullPointerException.class,
-                new Fun(){void f(){ env.put("foo",null);}},
-                new Fun(){void f(){ env.put(null,"foo");}},
-                new Fun(){void f(){ env.remove(null);}},
-                new Fun(){void f(){
-                    for (Map.Entry<String,String> e : env.entrySet())
-                        e.setValue(null);}},
-                new Fun() { void f() throws IOException {
-                    Runtime.getRuntime().exec(new String[]{"foo"},
-                                              new String[]{null});}});
+                   () -> env.put("foo",null),
+                   () -> env.put(null,"foo"),
+                   () -> env.remove(null),
+                   () -> { for (Map.Entry<String,String> e : env.entrySet())
+                               e.setValue(null);},
+                   () -> Runtime.getRuntime().exec(new String[]{"foo"},
+                                                   new String[]{null}));
         } catch (Throwable t) { unexpected(t); }
 
         //----------------------------------------------------------------
@@ -1375,10 +1356,10 @@ public class Basic {
         try {
             final Map<String,String> env = new ProcessBuilder().environment();
             THROWS(ClassCastException.class,
-                new Fun(){void f(){ env.remove(TRUE);}},
-                new Fun(){void f(){ env.keySet().remove(TRUE);}},
-                new Fun(){void f(){ env.values().remove(TRUE);}},
-                new Fun(){void f(){ env.entrySet().remove(TRUE);}});
+                   () -> env.remove(TRUE),
+                   () -> env.keySet().remove(TRUE),
+                   () -> env.values().remove(TRUE),
+                   () -> env.entrySet().remove(TRUE));
         } catch (Throwable t) { unexpected(t); }
 
         //----------------------------------------------------------------
@@ -1394,22 +1375,22 @@ public class Basic {
                 // Nulls in environment queries are forbidden.
                 //----------------------------------------------------------------
                 THROWS(NullPointerException.class,
-                    new Fun(){void f(){ getenv(null);}},
-                    new Fun(){void f(){ env.get(null);}},
-                    new Fun(){void f(){ env.containsKey(null);}},
-                    new Fun(){void f(){ env.containsValue(null);}},
-                    new Fun(){void f(){ env.keySet().contains(null);}},
-                    new Fun(){void f(){ env.values().contains(null);}});
+                       () -> getenv(null),
+                       () -> env.get(null),
+                       () -> env.containsKey(null),
+                       () -> env.containsValue(null),
+                       () -> env.keySet().contains(null),
+                       () -> env.values().contains(null));
 
                 //----------------------------------------------------------------
                 // Non-String types in environment queries are forbidden.
                 //----------------------------------------------------------------
                 THROWS(ClassCastException.class,
-                    new Fun(){void f(){ env.get(TRUE);}},
-                    new Fun(){void f(){ env.containsKey(TRUE);}},
-                    new Fun(){void f(){ env.containsValue(TRUE);}},
-                    new Fun(){void f(){ env.keySet().contains(TRUE);}},
-                    new Fun(){void f(){ env.values().contains(TRUE);}});
+                       () -> env.get(TRUE),
+                       () -> env.containsKey(TRUE),
+                       () -> env.containsValue(TRUE),
+                       () -> env.keySet().contains(TRUE),
+                       () -> env.values().contains(TRUE));
 
                 //----------------------------------------------------------------
                 // Illegal String values in environment queries are (grumble) OK
@@ -1427,12 +1408,11 @@ public class Basic {
             final Set<Map.Entry<String,String>> entrySet =
                 new ProcessBuilder().environment().entrySet();
             THROWS(NullPointerException.class,
-                   new Fun(){void f(){ entrySet.contains(null);}});
+                   () -> entrySet.contains(null));
             THROWS(ClassCastException.class,
-                new Fun(){void f(){ entrySet.contains(TRUE);}},
-                new Fun(){void f(){
-                    entrySet.contains(
-                        new SimpleImmutableEntry<Boolean,String>(TRUE,""));}});
+                   () -> entrySet.contains(TRUE),
+                   () -> entrySet.contains(
+                             new SimpleImmutableEntry<Boolean,String>(TRUE,"")));
 
             check(! entrySet.contains
                   (new SimpleImmutableEntry<String,String>("", "")));
@@ -1902,8 +1882,7 @@ public class Basic {
                 final ProcessBuilder pb =
                     new ProcessBuilder(new String[]{"unliKely"});
                 pb.environment().put("PATH", "suBdiR");
-                THROWS(IOException.class,
-                       new Fun() {void f() throws Throwable {pb.start();}});
+                THROWS(IOException.class, () -> pb.start());
             } catch (Throwable t) { unexpected(t);
             } finally {
                 new File("suBdiR/unliKely").delete();
@@ -1976,10 +1955,8 @@ public class Basic {
             equal(SIZE, p.getInputStream().available());
             equal(SIZE, p.getErrorStream().available());
             THROWS(IOException.class,
-                   new Fun(){void f() throws IOException {
-                       p.getOutputStream().write((byte) '!');
-                       p.getOutputStream().flush();
-                       }});
+                   () -> { p.getOutputStream().write((byte) '!');
+                           p.getOutputStream().flush();});
 
             final byte[] bytes = new byte[SIZE + 1];
             equal(SIZE, p.getInputStream().read(bytes));
@@ -2006,12 +1983,9 @@ public class Basic {
             InputStream[] streams = { p.getInputStream(), p.getErrorStream() };
             for (final InputStream in : streams) {
                 Fun[] ops = {
-                    new Fun(){void f() throws IOException {
-                        in.read(); }},
-                    new Fun(){void f() throws IOException {
-                        in.read(bytes); }},
-                    new Fun(){void f() throws IOException {
-                        in.available(); }}
+                    () -> in.read(),
+                    () -> in.read(bytes),
+                    () -> in.available()
                 };
                 for (Fun op : ops) {
                     try {
@@ -2215,21 +2189,17 @@ public class Basic {
         } catch (Throwable t) { unexpected(t); }
 
         THROWS(SecurityException.class,
-            new Fun() { void f() throws IOException {
-                policy.setPermissions(/* Nothing */);
-                System.getenv("foo");}},
-            new Fun() { void f() throws IOException {
-                policy.setPermissions(/* Nothing */);
-                System.getenv();}},
-            new Fun() { void f() throws IOException {
-                policy.setPermissions(/* Nothing */);
-                new ProcessBuilder("echo").start();}},
-            new Fun() { void f() throws IOException {
-                policy.setPermissions(/* Nothing */);
-                Runtime.getRuntime().exec("echo");}},
-            new Fun() { void f() throws IOException {
-                policy.setPermissions(new RuntimePermission("getenv.bar"));
-                System.getenv("foo");}});
+               () -> { policy.setPermissions(/* Nothing */);
+                       System.getenv("foo");},
+               () -> { policy.setPermissions(/* Nothing */);
+                       System.getenv();},
+               () -> { policy.setPermissions(/* Nothing */);
+                       new ProcessBuilder("echo").start();},
+               () -> { policy.setPermissions(/* Nothing */);
+                       Runtime.getRuntime().exec("echo");},
+               () -> { policy.setPermissions(
+                               new RuntimePermission("getenv.bar"));
+                       System.getenv("foo");});
 
         try {
             policy.setPermissions(new RuntimePermission("getenv.foo"));
@@ -2246,18 +2216,16 @@ public class Basic {
             = new FilePermission("<<ALL FILES>>", "execute");
 
         THROWS(SecurityException.class,
-            new Fun() { void f() throws IOException {
-                // environment permission by itself insufficient
-                policy.setPermissions(new RuntimePermission("getenv.*"));
-                ProcessBuilder pb = new ProcessBuilder("env");
-                pb.environment().put("foo","bar");
-                pb.start();}},
-            new Fun() { void f() throws IOException {
-                 // exec permission by itself insufficient
-                 policy.setPermissions(execPermission);
-                 ProcessBuilder pb = new ProcessBuilder("env");
-                 pb.environment().put("foo","bar");
-                 pb.start();}});
+               () -> { // environment permission by itself insufficient
+                       policy.setPermissions(new RuntimePermission("getenv.*"));
+                       ProcessBuilder pb = new ProcessBuilder("env");
+                       pb.environment().put("foo","bar");
+                       pb.start();},
+               () -> { // exec permission by itself insufficient
+                       policy.setPermissions(execPermission);
+                       ProcessBuilder pb = new ProcessBuilder("env");
+                       pb.environment().put("foo","bar");
+                       pb.start();});
 
         try {
             // Both permissions? OK.
@@ -2585,7 +2553,7 @@ public class Basic {
         try {realMain(args);} catch (Throwable t) {unexpected(t);}
         System.out.printf("%nPassed = %d, failed = %d%n%n", passed, failed);
         if (failed > 0) throw new AssertionError("Some tests failed");}
-    private static abstract class Fun {abstract void f() throws Throwable;}
+    interface Fun {void f() throws Throwable;}
     static void THROWS(Class<? extends Throwable> k, Fun... fs) {
         for (Fun f : fs)
             try { f.f(); fail("Expected " + k.getName() + " not thrown"); }
